--- a/trunk/MainUI.lfm
+++ b/trunk/MainUI.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 69
+  Left = 20
   Height = 716
-  Top = 167
+  Top = 351
   Width = 1190
   ActiveControl = Panel1
   Caption = 'Ocrivist'
@@ -106,8 +106,8 @@ object Form1: TForm1
       Left = 20
       Height = 25
       Top = 71
-      Width = 75
-      Caption = 'Button4'
+      Width = 120
+      Caption = 'Test Load Image'
       OnClick = Button4Click
       TabOrder = 0
     end
@@ -116,7 +116,7 @@ object Form1: TForm1
       Height = 25
       Top = 125
       Width = 123
-      Caption = 'Fit to height'
+      Caption = 'Set smCrop'
       OnClick = Button5Click
       TabOrder = 1
     end
@@ -125,7 +125,7 @@ object Form1: TForm1
       Height = 25
       Top = 165
       Width = 120
-      Caption = 'Fit to Width'
+      Caption = 'Set smSelection'
       OnClick = Button6Click
       TabOrder = 2
     end
@@ -137,6 +137,15 @@ object Form1: TForm1
       Caption = 'Test Save Project'
       OnClick = Button7Click
       TabOrder = 3
+    end
+    object Button8: TButton
+      Left = 27
+      Height = 25
+      Top = 254
+      Width = 115
+      Caption = 'Test Deskew'
+      OnClick = Button8Click
+      TabOrder = 4
     end
   end
   object Splitter2: TSplitter
@@ -174,6 +183,18 @@ object Form1: TForm1
       end
       object ExitMenuItem: TMenuItem
         Caption = 'Exit'
+      end
+    end
+    object ViewMenu: TMenuItem
+      Caption = 'View'
+      object FitHeightMenuItem: TMenuItem
+        Caption = 'Fit to Height'
+        OnClick = ViewMenuItemClick
+      end
+      object FitWidthMenuItem: TMenuItem
+        Tag = 1
+        Caption = 'Fit to Width'
+        OnClick = ViewMenuItemClick
       end
     end
   end
