--- a/trunk/scanner.lfm
+++ b/trunk/scanner.lfm
@@ -3,7 +3,7 @@ object ScannerForm: TScannerForm
   Height = 274
   Top = 244
   Width = 320
-  ActiveControl = ModeComboBox
+  ActiveControl = DeviceComboBox
   Caption = 'Scanner settings'
   ClientHeight = 274
   ClientWidth = 320
@@ -11,30 +11,25 @@ object ScannerForm: TScannerForm
   Position = poMainFormCenter
   LCLVersion = '0.9.29'
   object ModeComboBox: TComboBox
-    Left = 20
+    Left = 155
     Height = 27
     Top = 88
     Width = 148
+    Anchors = [akTop, akLeft, akRight]
     Enabled = False
     ItemHeight = 0
     TabOrder = 0
   end
-  object ResolutionSpinEdit: TSpinEdit
-    Left = 24
-    Height = 25
-    Top = 136
-    Width = 77
-    Enabled = False
-    TabOrder = 1
-  end
   object DeviceComboBox: TComboBox
     Left = 20
-    Height = 27
+    Height = 29
     Top = 32
     Width = 284
+    Anchors = [akTop, akLeft, akRight]
     ItemHeight = 0
-    TabOrder = 2
-    Text = 'No scanners found'
+    OnChange = DeviceComboBoxChange
+    Style = csDropDownList
+    TabOrder = 1
   end
   object OKButton: TBitBtn
     AnchorSideLeft.Side = asrCenter
@@ -48,6 +43,58 @@ object ScannerForm: TScannerForm
     Default = True
     Kind = bkOK
     ModalResult = 1
+    TabOrder = 2
+  end
+  object ResolutionComboBox: TComboBox
+    Left = 155
+    Height = 29
+    Top = 131
+    Width = 149
+    Anchors = [akTop, akLeft, akRight]
+    ItemHeight = 0
+    ItemIndex = 1
+    Items.Strings = (
+      '200 dpi'
+      '300 dpi'
+      '600 dpi'
+      '1200 dpi'
+    )
+    Style = csDropDownList
     TabOrder = 3
+    Text = '300 dpi'
+  end
+  object Label1: TLabel
+    AnchorSideTop.Control = ModeComboBox
+    AnchorSideTop.Side = asrCenter
+    AnchorSideRight.Control = ModeComboBox
+    Left = 106
+    Height = 18
+    Top = 92
+    Width = 34
+    Anchors = [akTop, akRight]
+    BorderSpacing.Right = 15
+    Caption = 'Color'
+    ParentColor = False
+  end
+  object Label2: TLabel
+    AnchorSideTop.Control = ResolutionComboBox
+    AnchorSideTop.Side = asrCenter
+    AnchorSideRight.Control = ResolutionComboBox
+    Left = 74
+    Height = 18
+    Top = 136
+    Width = 66
+    Anchors = [akTop, akRight]
+    BorderSpacing.Right = 15
+    Caption = 'Resolution'
+    ParentColor = False
+  end
+  object Label3: TLabel
+    Left = 20
+    Height = 18
+    Top = 11
+    Width = 54
+    Caption = 'Scanner'
+    ParentColor = False
   end
 end
