--- a/trunk/MainUI.lfm
+++ b/trunk/MainUI.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
   Left = 21
   Height = 716
-  Top = 331
+  Top = 239
   Width = 1186
   ActiveControl = Panel1
   Caption = 'Ocrivist'
@@ -156,6 +156,24 @@ object Form1: TForm1
       OnClick = Button9Click
       TabOrder = 5
     end
+    object TestTesseractButton: TButton
+      Left = 27
+      Height = 25
+      Top = 342
+      Width = 114
+      Caption = 'Tesseract'
+      OnClick = TestTesseractButtonClick
+      TabOrder = 6
+    end
+    object TestDJVUButton: TButton
+      Left = 29
+      Height = 24
+      Top = 391
+      Width = 114
+      Caption = 'Test DJVU'
+      OnClick = TestDJVUButtonClick
+      TabOrder = 7
+    end
   end
   object Splitter2: TSplitter
     Left = 1011
@@ -198,6 +216,13 @@ object Form1: TForm1
       object MenuItem3: TMenuItem
         Caption = '-'
       end
+      object SetScannerMenuItem: TMenuItem
+        Caption = 'Select Scanner'
+        OnClick = SetScannerMenuItemClick
+      end
+      object MenuItem2: TMenuItem
+        Caption = '-'
+      end
       object ExitMenuItem: TMenuItem
         Caption = 'Exit'
         OnClick = ExitMenuItemClick
@@ -215,6 +240,7 @@ object Form1: TForm1
       end
       object DelPageMenuItem: TMenuItem
         Caption = 'Delete'
+        Enabled = False
         OnClick = DelPageMenuItemClick
       end
     end
