--- a/trunk/scanner.lfm
+++ b/trunk/scanner.lfm
@@ -1,100 +1,207 @@
 object ScannerForm: TScannerForm
-  Left = 437
+  Left = 604
   Height = 274
-  Top = 244
+  Top = 65
   Width = 320
-  ActiveControl = DeviceComboBox
+  ActiveControl = PageControl1
   Caption = 'Scanner settings'
   ClientHeight = 274
   ClientWidth = 320
   OnCreate = FormCreate
   Position = poMainFormCenter
   LCLVersion = '0.9.29'
-  object ModeComboBox: TComboBox
-    Left = 155
-    Height = 27
-    Top = 88
-    Width = 148
-    Anchors = [akTop, akLeft, akRight]
-    Enabled = False
-    ItemHeight = 0
-    TabOrder = 0
-  end
-  object DeviceComboBox: TComboBox
-    Left = 20
-    Height = 29
-    Top = 32
-    Width = 284
-    Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 0
-    OnChange = DeviceComboBoxChange
-    Style = csDropDownList
-    TabOrder = 1
-  end
   object OKButton: TBitBtn
+    AnchorSideLeft.Control = PageControl1
     AnchorSideLeft.Side = asrCenter
     AnchorSideBottom.Side = asrBottom
-    Left = 128
+    Left = 123
     Height = 30
-    Top = 222
+    Top = 232
     Width = 75
     Anchors = [akLeft, akBottom]
     Caption = '&OK'
     Default = True
     Kind = bkOK
     ModalResult = 1
-    TabOrder = 2
+    TabOrder = 0
   end
-  object ResolutionComboBox: TComboBox
-    Left = 155
-    Height = 29
-    Top = 131
-    Width = 149
-    Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 0
-    ItemIndex = 1
-    Items.Strings = (
-      '200 dpi'
-      '300 dpi'
-      '600 dpi'
-      '1200 dpi'
-    )
-    Style = csDropDownList
-    TabOrder = 3
-    Text = '300 dpi'
-  end
-  object Label1: TLabel
-    AnchorSideTop.Control = ModeComboBox
-    AnchorSideTop.Side = asrCenter
-    AnchorSideRight.Control = ModeComboBox
-    Left = 106
-    Height = 18
-    Top = 92
-    Width = 34
-    Anchors = [akTop, akRight]
-    BorderSpacing.Right = 15
-    Caption = 'Color'
-    ParentColor = False
-  end
-  object Label2: TLabel
-    AnchorSideTop.Control = ResolutionComboBox
-    AnchorSideTop.Side = asrCenter
-    AnchorSideRight.Control = ResolutionComboBox
-    Left = 74
-    Height = 18
-    Top = 136
-    Width = 66
-    Anchors = [akTop, akRight]
-    BorderSpacing.Right = 15
-    Caption = 'Resolution'
-    ParentColor = False
-  end
-  object Label3: TLabel
-    Left = 20
-    Height = 18
-    Top = 11
-    Width = 54
-    Caption = 'Scanner'
-    ParentColor = False
+  object PageControl1: TPageControl
+    Left = 0
+    Height = 216
+    Top = 0
+    Width = 320
+    ActivePage = ScanSheet1
+    Anchors = [akTop, akLeft, akRight, akBottom]
+    TabIndex = 0
+    TabOrder = 1
+    object ScanSheet1: TTabSheet
+      Caption = 'Scanner'
+      ClientHeight = 189
+      ClientWidth = 318
+      object ModeComboBox: TComboBox
+        Left = 155
+        Height = 27
+        Top = 88
+        Width = 148
+        Anchors = [akTop, akLeft, akRight]
+        Enabled = False
+        ItemHeight = 0
+        TabOrder = 0
+      end
+      object DeviceComboBox: TComboBox
+        Left = 20
+        Height = 29
+        Top = 32
+        Width = 284
+        Anchors = [akTop, akLeft, akRight]
+        ItemHeight = 0
+        OnChange = DeviceComboBoxChange
+        Style = csDropDownList
+        TabOrder = 1
+      end
+      object ResolutionComboBox: TComboBox
+        Left = 155
+        Height = 29
+        Top = 131
+        Width = 149
+        Anchors = [akTop, akLeft, akRight]
+        ItemHeight = 0
+        ItemIndex = 1
+        Items.Strings = (
+          '200 dpi'
+          '300 dpi'
+          '600 dpi'
+          '1200 dpi'
+        )
+        Style = csDropDownList
+        TabOrder = 2
+        Text = '300 dpi'
+      end
+      object Label1: TLabel
+        AnchorSideTop.Control = ModeComboBox
+        AnchorSideTop.Side = asrCenter
+        AnchorSideRight.Control = ModeComboBox
+        Left = 106
+        Height = 18
+        Top = 92
+        Width = 34
+        Anchors = [akTop, akRight]
+        BorderSpacing.Right = 15
+        Caption = 'Color'
+        ParentColor = False
+      end
+      object Label2: TLabel
+        AnchorSideTop.Control = ResolutionComboBox
+        AnchorSideTop.Side = asrCenter
+        AnchorSideRight.Control = ResolutionComboBox
+        Left = 74
+        Height = 18
+        Top = 136
+        Width = 66
+        Anchors = [akTop, akRight]
+        BorderSpacing.Right = 15
+        Caption = 'Resolution'
+        ParentColor = False
+      end
+    end
+    object ScanSheet2: TTabSheet
+      Caption = 'Page size'
+      ClientHeight = 189
+      ClientWidth = 318
+      object Label3: TLabel
+        AnchorSideTop.Control = WidthSpinEdit
+        AnchorSideTop.Side = asrCenter
+        AnchorSideRight.Control = WidthSpinEdit
+        Left = 72
+        Height = 18
+        Top = 31
+        Width = 40
+        Anchors = [akTop, akRight]
+        BorderSpacing.Right = 15
+        Caption = 'Width:'
+        ParentColor = False
+      end
+      object Label4: TLabel
+        AnchorSideTop.Control = HeightSpinEdit
+        AnchorSideTop.Side = asrCenter
+        AnchorSideRight.Control = HeightSpinEdit
+        Left = 67
+        Height = 18
+        Top = 69
+        Width = 47
+        Anchors = [akTop, akRight]
+        BorderSpacing.Right = 15
+        Caption = 'Height:'
+        ParentColor = False
+      end
+      object WidthSpinEdit: TSpinEdit
+        Left = 127
+        Height = 25
+        Top = 28
+        Width = 80
+        MaxValue = 1000
+        MinValue = 50
+        OnChange = PaperSideEditChange
+        TabOrder = 0
+        Value = 50
+      end
+      object HeightSpinEdit: TSpinEdit
+        Left = 129
+        Height = 25
+        Top = 66
+        Width = 78
+        MaxValue = 1000
+        MinValue = 50
+        OnChange = PaperSideEditChange
+        TabOrder = 1
+        Value = 50
+      end
+      object Label5: TLabel
+        AnchorSideLeft.Control = WidthSpinEdit
+        AnchorSideLeft.Side = asrBottom
+        Left = 217
+        Height = 18
+        Top = 31
+        Width = 27
+        BorderSpacing.Left = 10
+        Caption = 'mm'
+        ParentColor = False
+      end
+      object Label6: TLabel
+        AnchorSideLeft.Control = HeightSpinEdit
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = HeightSpinEdit
+        AnchorSideTop.Side = asrCenter
+        Left = 217
+        Height = 18
+        Top = 69
+        Width = 27
+        BorderSpacing.Left = 10
+        Caption = 'mm'
+        ParentColor = False
+      end
+      object PaperFormatBox: TComboBox
+        Left = 71
+        Height = 27
+        Top = 116
+        Width = 136
+        ItemHeight = 0
+        ItemIndex = 2
+        Items.Strings = (
+          'Custom'
+          'A3'
+          'A4'
+          'A5'
+          'B4'
+          'B5'
+          'B6'
+          'Letter'
+          'Executive'
+        )
+        OnChange = PaperFormatBoxChange
+        TabOrder = 2
+        Text = 'A4'
+      end
+    end
   end
 end
