Basic djvu document creation now working

--- a/MainUI.lfm
+++ b/MainUI.lfm
@@ -1,12 +1,12 @@
 object Form1: TForm1
-  Left = 342
-  Height = 455
-  Top = 25
-  Width = 674
+  Left = 50
+  Height = 637
+  Top = 237
+  Width = 1072
   ActiveControl = Panel1
   Caption = 'Ocrivist'
-  ClientHeight = 428
-  ClientWidth = 674
+  ClientHeight = 610
+  ClientWidth = 1072
   Menu = MainMenu1
   OnCreate = FormCreate
   OnDestroy = FormDestroy
@@ -15,11 +15,11 @@ object Form1: TForm1
     Left = 0
     Height = 40
     Top = 0
-    Width = 674
+    Width = 1072
     Align = alTop
     Caption = 'Panel1'
     ClientHeight = 40
-    ClientWidth = 674
+    ClientWidth = 1072
     TabOrder = 0
     object RotateLeftButton: TSpeedButton
       Tag = -1
@@ -452,15 +452,156 @@ object Form1: TForm1
       GroupIndex = 1
       NumGlyphs = 0
     end
+    object DjvuButton: TSpeedButton
+      Left = 352
+      Height = 36
+      Top = 2
+      Width = 36
+      Color = clBtnFace
+      Glyph.Data = {
+        36100000424D3610000000000000360000002800000020000000200000000100
+        2000000000000010000064000000640000000000000000000000FFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF000000FF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF000000FF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FFDDDD
+        DDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDD
+        DDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDD
+        DDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF000000FF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF000000FF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF000000FF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF990033FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF990033FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF940029FF940029FF9400
+        29FF940029FF940029FF940029FF940029FF940029FF940029FF940029FF9400
+        29FF940029FF940029FF940029FFA10017FFB30007FFA10017FF9B0229FF9900
+        33FF940029FF940029FF940029FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF940029FF940029FF9400
+        29FF940029FF940029FF940029FF940029FF940029FF940029FF940029FF9400
+        29FF8C001AFF860011FF860011FF821E45FF821E45FFA40020FFA10017FFA100
+        17FF920022FF940029FF940029FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF990033FF990033FF940029FF8600
+        11FFAC2F59FFCA7A96FFCE869DFF3AA1E4FF079DF6FF366BB6FF6A3073FF8D12
+        43FFA20532FFA20532FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF990033FF990033FF8C001AFF9610
+        2EFFD79CB0FFFACFDAFFD8C9D8FF24B7FFFF00A6FFFF00A6FFFF2C71CBFF4455
+        ABFF842A61FFA20532FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF990033FF990033FFA22143FFC873
+        91FFE7C4CFFFE68A9AFFA3799DFF00A6FFFF0099FFFF00A6FFFF00A6FFFF079D
+        F6FF534A93FF950735FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF8D001FFF9E1744FFF9F1F6FFF0D7
+        E0FFA2204AFFAD0022FF743C76FF0099FFFF0A97F9FF0A97F9FF0A97F9FF00AD
+        FFFF743C76FFAD0022FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF9D1B3CFFCE869DFFF0DEE5FFCA7A
+        96FFBC5F7CFFD58FA6FFC0B7D2FF1EA5FDFF008EFBFF0A97F9FF0A97F9FF0A97
+        F9FF8D2054FFAD0022FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF990033FF990033FF9900
+        33FF990033FF990033FF920022FF860011FFEDCDD8FFEDCDD8FFBB6284FFE0B5
+        C4FFDB7D93FF816AA2FF77BCE8FF51D2FFFF0099FFFF0A97F9FF00A6FFFF188A
+        E7FF950735FFA40020FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF990033FF990033FF9900
+        33FF990033FF8C001AFF8C001AFFAB3C5AFFF0D7E0FFBC6989FFD79CB0FFE0B5
+        C4FFB12142FF55013EFF6769A9FF77BCE8FF006EDEFF00ADFFFF00C3FFFF2178
+        D0FF9B0229FF9B0229FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF990033FF990033FF9900
+        33FF990033FF8C001AFFAE3152FFE0B5C4FFCE869DFFB24C71FFDCA7B8FFAF3E
+        63FF8B000DFF7E0326FFAE6C93FFA3799DFF2540A1FF11A1F1FF00ADFFFF366B
+        B6FF9B0229FF990033FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF990033FF990033FF9400
+        29FF8C001AFFCE869DFFF6E6EDFFDEACBFFFCC8BA4FFF6E6EDFF971838FF8B00
+        0DFF940829FFDCA7B8FFFEF3F5FFAC2F59FFD58FA6FFAE3152FF741352FF771E
+        5DFF990033FF990033FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF990033FF990033FF9200
+        22FF940829FFF5E0EBFFE7C4CFFFB65472FFF0DEE5FFE0B5C4FF810005FF8C00
+        1AFFCA7A96FFF9F1F6FFE0B5C4FFCC7E98FFF1CAD3FFC40216FFA10017FF9900
+        33FF990033FF990033FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF990033FF940029FFAC2F
+        59FFE0B5C4FFBB6284FFA2204AFFE8C9D3FFBC5F7CFF940829FF8C001AFFAF3E
+        63FFF5E0EBFFB24C71FF9C0F3AFFF6E6EDFFC46B88FF940029FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF940029FF860011FFDEAC
+        BFFFFEF3F5FF9E1744FFCC7E98FFF5E0EBFF940829FF8C001AFFAA2C57FFE0B5
+        C4FFBC5F7CFF9C0F3AFFC87391FFD496A8FF9D1B3CFF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF8D001FFFBB6284FFDEAC
+        BFFFA01141FFF0D7E0FFE7C4CFFFAF3E63FF860011FF940029FFF6E6EDFFDCA7
+        B8FFAB3C5AFFE0B5C4FFE0B5C4FF940829FF940029FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FFB65472FFEDCDD8FFB549
+        6CFFAA2C57FFF6E6EDFFBC5F7CFF96102EFF8D001FFFBC5F7CFFE7C4CFFFA825
+        51FFD79CB0FFE8C9D3FFB65472FF920022FF990033FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF000000FF000000FFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FFF0D7E0FFF0D7E0FFAA2C
+        57FFE0B5C4FFCA7A96FF920022FF860011FFBC5F7CFFF5E0EBFFB5496CFF9610
+        2EFFE8C9D3FFC46B88FF920022FF940029FF990033FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF000000FF000000FF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF000000FF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF000000FF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF000000FF000000FF000000FFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF000000FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF000000FF000000FF000000FFFFFF
+        FFFFFFFFFFFFFFFFFFFF990033FF990033FFA2204AFFF0DEE5FFEDCDD8FFCC7E
+        98FFFFFFFFFFC46B88FF990033FFC46B88FFD58FA6FFA01141FF990033FFB23F
+        65FFFFFFFFFFFFFFFFFFFFFFFFFF000000FF000000FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF000000FF000000FF000000FFFFFF
+        FFFFFFFFFFFFFFFFFFFFB23F65FFFFFFFFFFA2204AFFB65472FFFFFFFFFFCC7E
+        98FFFFFFFFFFA2204AFFA2204AFFA2204AFFCC7E98FFB23F65FFC46B88FFB23F
+        65FFFFFFFFFFFFFFFFFFFFFFFFFF000000FF000000FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF000000FF000000FF000000FFFFFF
+        FFFFFFFFFFFFFFFFFFFFB23F65FFFFFFFFFFCC7E98FF990033FFFFFFFFFFCC7E
+        98FFFFFFFFFF990033FFE7BECDFF990033FFCC7E98FFB23F65FFCC7E98FFB23F
+        65FFFFFFFFFFFFFFFFFFFFFFFFFF000000FF000000FF990033FF990033FF9900
+        33FF990033FF990033FF990033FF990033FF000000FFFFFFFFFF000000FFFFFF
+        FFFFFFFFFFFFFFFFFFFFAC2F59FFE7BECDFF990033FFCC7E98FFFFFFFFFFE7BE
+        CDFFFFFFFFFFF0DEE5FFFFFFFFFFF0DEE5FFF0DEE5FFEDCDD8FFF0DEE5FFEDCD
+        D8FFFFFFFFFFFFFFFFFFFFFFFFFF000000FF000000FF990033FF990033FF0000
+        00FF000000FF000000FF000000FF000000FF000000FFFFFFFFFF000000FFFFFF
+        FFFFFFFFFFFFFFFFFFFF990033FF990033FFCC7E98FFFFFFFFFFFFFFFFFFCC7E
+        98FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF000000FF990033FF990033FF0000
+        00FFFFFFFFFFFFFFFFFFEFEFEFFF000000FFFFFFFFFFFFFFFFFF000000FFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF000000FF990033FF990033FF0000
+        00FFFFFFFFFF000000FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF000000FF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF000000FF000000FF0000
+        00FF000000FF000000FF000000FF000000FF940029FF940029FF940029FF0000
+        00FF000000FF101010FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FFEDCDD8FFD58FA6FF8600
+        11FF940029FF950735FF860011FF940029FF940029FF940029FF940029FF9400
+        29FF940029FF940029FF940029FF940029FF940029FF940029FF940029FF0000
+        00FF101010FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FF000000FF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF000000FF000000FF0000
+        00FF000000FF000000FF000000FF000000FF000000FF000000FF000000FF0000
+        00FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      }
+      NumGlyphs = 0
+      OnClick = DjvuButtonClick
+    end
   end
   object Panel3: TPanel
     Left = 0
-    Height = 367
+    Height = 549
     Top = 40
     Width = 130
     Align = alLeft
     Caption = 'Panel3'
-    ClientHeight = 367
+    ClientHeight = 549
     ClientWidth = 130
     TabOrder = 1
     object ListBox1: TListBox
@@ -485,18 +626,18 @@ object Form1: TForm1
   end
   object Splitter1: TSplitter
     Left = 130
-    Height = 367
+    Height = 549
     Top = 40
     Width = 5
   end
   object Panel4: TPanel
-    Left = 504
-    Height = 367
+    Left = 902
+    Height = 549
     Top = 40
     Width = 170
     Align = alRight
     Caption = 'Panel4'
-    ClientHeight = 367
+    ClientHeight = 549
     ClientWidth = 170
     TabOrder = 3
     object Button5: TButton
@@ -564,8 +705,8 @@ object Form1: TForm1
     end
   end
   object Splitter2: TSplitter
-    Left = 499
-    Height = 367
+    Left = 897
+    Height = 549
     Top = 40
     Width = 5
     Align = alRight
@@ -573,9 +714,9 @@ object Form1: TForm1
   end
   object Panel5: TPanel
     Left = 135
-    Height = 367
+    Height = 549
     Top = 40
-    Width = 364
+    Width = 762
     Align = alClient
     AutoSize = True
     Caption = 'Panel5'
@@ -584,9 +725,16 @@ object Form1: TForm1
   object StatusBar1: TStatusBar
     Left = 0
     Height = 21
-    Top = 407
-    Width = 674
-    Panels = <>
+    Top = 589
+    Width = 1072
+    Panels = <    
+      item
+        Width = 50
+      end    
+      item
+        Width = 300
+      end>
+    SimplePanel = False
   end
   object OpenDialog1: TOpenDialog
     left = 40
