--- a/trunk/MainUI.lfm
+++ b/trunk/MainUI.lfm
@@ -140,6 +140,7 @@ object MainForm: TMainForm
             Option = 0
             Priority = 0
           end>
+        Highlighter = SynAnySyn1
         Keystrokes = <        
           item
             Command = ecUp
